--- a/package.json
+++ b/package.json
@@ -23,31 +23,37 @@
     "url": "https://github.com/cloudfour/drizzle.git"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=20.0.0"
+  },
+  "dependencies": {
+    "@11ty/eleventy": "^3.0.0",
+    "postcss-cli": "^11.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@cloudfour/eslint-config": "^1.0.0",
-    "@cloudfour/gulp-tasks": "^2.0.1",
-    "@cloudfour/hbs-helpers": "^0.6.1",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "doctoc": "^1.1.1",
+    "@cloudfour/gulp-tasks": "^2.5.0",
+    "@cloudfour/hbs-helpers": "^0.11.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.2",
+    "doctoc": "^2.2.1",
     "drizzle-builder": "0.0.10",
+    "esbuild": "^0.24.0",
     "eslint": "^5.0.1",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-unicorn": "^4.0.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-util": "^3.0.7",
-    "postcss-cssnext": "^2.5.2",
-    "prettier": "^1.13.7",
-    "prismjs": "^1.4.1",
+    "gulp-util": "^3.0.8",
+    "postcss": "^8.4.47",
+    "postcss-cssnext": "^3.1.1",
+    "prettier": "^3.2.5",
+    "prismjs": "^1.29.0",
     "suitcss-base": "^2.0.0",
     "suitcss-components-arrange": "^1.1.1",
     "suitcss-components-button": "^5.0.0",
@@ -56,8 +62,8 @@
   },
   "scripts": {
     "prestart": "npm install",
-    "start": "gulp --dev",
-    "build": "npm run prestart && gulp",
+    "start": "eleventy --serve",
+    "build": "npm run eleventy",
     "docs": "doctoc --title \"### Contents\" --maxlevel 2 docs/README.md",
     "check-lint": "prettier --list-different '**/*.js' && eslint '**/*.js'",
     "lint": "prettier --write '**/*.js' && eslint --fix '**/*.js'"
@@ -70,5 +76,8 @@
   ],
   "prettier": {
     "singleQuote": true
+  },
+  "overrides": {
+    "graceful-fs": "^4.2.11"
   }
 }
